add option uposatha based on  country

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -77,5 +77,6 @@
   "moon": "moon",
   "darkMode": "Dark Mode",
   "color": "Color",
-  "material3": "Material 3"
+  "material3": "Material 3",
+  "uposathaCountry": "Uposatha Country"
 }
