--- a/lib/l10n/app_km.arb
+++ b/lib/l10n/app_km.arb
@@ -77,5 +77,9 @@
     "moon": "ព្រះច័ន្ទ",
     "darkMode": "ទំរង់ងងឹត",
     "color": "ពណ៌",
-    "material3": "Material 3"
+    "material3": "Material 3",
+    "uposathaCountry": "ប្រទេសអុុបោសថ",
+    "autoUpdateGps": "បច្ចុប្បន្នភាព GPS ដោយស្វ័យប្រវត្តិ",
+    "refreshingGps": "កំពុងធ្វើបច្ចុប្បន្នភាព GPS",
+    "command": "flutter gen-l10n"
 }
