--- a/lib/l10n/app_my.arb
+++ b/lib/l10n/app_my.arb
@@ -83,5 +83,9 @@
     "moon": "လ",
     "darkMode": "အနက်ရောင်နည်း",
     "color": "အရောင်",
-    "material3": "မက်တီရီယယ် ၃"
+    "material3": "မက်တီရီယယ် ၃",
+    "uposathaCountry": "ဥပုသ်နိုင်ငံ",
+    "autoUpdateGps": "GPS ကိုအော်တိုအပ်ဒိတ်လုပ်ရန်",
+    "refreshingGps": "GPS ကိုပြန်လည်တင်နေသည်",
+    "command": "flutter gen-l10n"
 }
