upgrade to current version of flutter 3.32.1 Includes internationalization fixes. gitignore updated to not include genreated files.

--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,4 +1,6 @@
 {
+    "@@locale": "fr",
+    "appName": "Buddhist Sun",
     "buddhistSun":                      "佛教太阳",
     "noon":                             "Noon",
     "dawn":                             "Dawn",
