--- a/lib/l10n/app_km.arb
+++ b/lib/l10n/app_km.arb
@@ -1,4 +1,6 @@
 {
+    "@@locale": "km",
+    "appName": "Buddhist Sun",
     "buddhistSun": "Buddhist Sun",
     "noon": "ថ្ងៃត្រង់",
     "dawn": "ពេលអរុណរះ",
