--- a/lib/l10n/app_si.arb
+++ b/lib/l10n/app_si.arb
@@ -1,4 +1,6 @@
 {
+    "@@locale": "si",
+    "appName": "Buddhist Sun",
     "buddhistSun": "විකාල දර්ශකය",
     "noon": "මධ්‍යාහ්නය",
     "dawn": "අරුණ",
