--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -1,4 +1,6 @@
 {
+  "@@locale": "vi",
+  "appName": "Buddhist Sun",
   "buddhistSun": "Giờ Mặt Trời Dành Cho Đạo Phật",
   "@buddhistSun": {
     "description": "Title for app"
