--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -1,4 +1,6 @@
 {
+  "@@locale": "zh",
+  "appName": "Buddhist Sun",
   "buddhistSun": "佛日",
   "@buddhistSun": {
     "description": "Title for app"
